@@ -278,6 +278,9 @@ the following state designators:
 \f3r\fP
 running
 .TP
+\f3rs\fP
+resizing
+.TP
 \f3s\fP
 suspended
 .TP
@@ -604,7 +607,7 @@ Initiation time of the job in the same format as \f3end\fP.
 \f3state\fP
 Displays the job status, or state.
 
-Output can be RUNNING, SUSPENDED, COMPLETED,  CANCELLED, FAILED,
+Output can be RUNNING, RESIZING, SUSPENDED, COMPLETED,  CANCELLED, FAILED,
 TIMEOUT, or NODE_FAIL.
 
 .TP
