@@ -882,6 +882,8 @@ char *job_state_string(uint16_t inx)
 		return "COMPLETING";
 	if (inx & JOB_CONFIGURING)
 		return "CONFIGURING";
+	if (inx & JOB_RESIZING)
+		return "RESIZING";
 
 	/* Process JOB_STATE_BASE */
 	switch (inx & JOB_STATE_BASE) {
@@ -913,6 +915,8 @@ char *job_state_string_compact(uint16_t inx)
 		return "CG";
 	if (inx & JOB_CONFIGURING)
 		return "CF";
+	if (inx & JOB_RESIZING)
+		return "RS";
 
 	/* Process JOB_STATE_BASE */
 	switch (inx & JOB_STATE_BASE) {
