@@ -247,7 +247,7 @@ extern int slurm_jobcomp_log_record ( struct job_record *job_ptr )
 	int rc = SLURM_SUCCESS;
 	char job_rec[1024];
 	char usr_str[32], grp_str[32], start_str[32], end_str[32], lim_str[32];
-	char select_buf[128], *work_dir;
+	char select_buf[128], *state_string, *work_dir;
 	size_t offset = 0, tot_size, wrote;
 	enum job_states job_state;
 	uint32_t time_limit;
@@ -272,13 +272,32 @@ extern int slurm_jobcomp_log_record ( struct job_record *job_ptr )
 			 (unsigned long) time_limit);
 	}
 
-	/* Job will typically be COMPLETING when this is called.
-	 * We remove the flags to get the eventual completion state:
-	 * JOB_FAILED, JOB_TIMEOUT, etc. */
-	job_state = job_ptr->job_state & JOB_STATE_BASE;
-
-	_make_time_str(&(job_ptr->start_time), start_str, sizeof(start_str));
-	_make_time_str(&(job_ptr->end_time), end_str, sizeof(end_str));
+	if (job_ptr->job_state & JOB_RESIZING) {
+		time_t now = time(NULL);
+		state_string = job_state_string(job_ptr->job_state);
+		if (job_ptr->resize_time) {
+			_make_time_str(&job_ptr->resize_time, start_str,
+				       sizeof(start_str));
+		} else {
+			_make_time_str(&job_ptr->start_time, start_str,
+				       sizeof(start_str));
+		}
+		_make_time_str(&now, end_str, sizeof(end_str));
+	} else {
+		/* Job state will typically have JOB_COMPLETING or JOB_RESIZING
+		 * flag set when called. We remove the flags to get the eventual
+		 * completion state: JOB_FAILED, JOB_TIMEOUT, etc. */
+		job_state = job_ptr->job_state & JOB_STATE_BASE;
+		state_string = job_state_string(job_state);
+		if (job_ptr->resize_time) {
+			_make_time_str(&job_ptr->resize_time, start_str,
+				       sizeof(start_str));
+		} else {
+			_make_time_str(&job_ptr->start_time, start_str,
+				       sizeof(start_str));
+		}
+		_make_time_str(&job_ptr->end_time, end_str, sizeof(end_str));
+	}
 
 	if (job_ptr->details && job_ptr->details->work_dir)
 		work_dir = job_ptr->details->work_dir;
@@ -292,8 +311,7 @@ extern int slurm_jobcomp_log_record ( struct job_record *job_ptr )
 		 (unsigned long) job_ptr->job_id, usr_str,
 		 (unsigned long) job_ptr->user_id, grp_str,
 		 (unsigned long) job_ptr->group_id, job_ptr->name,
-		 job_state_string(job_state),
-		 job_ptr->partition, lim_str, start_str,
+		 state_string, job_ptr->partition, lim_str, start_str,
 		 end_str, job_ptr->nodes, job_ptr->node_cnt,
 		 job_ptr->total_cpus, work_dir,
 		 select_buf);
