@@ -870,6 +870,9 @@ extern int job_node_ready(uint32_t job_id, int *ready);
  */
 extern void job_preempt_remove(uint32_t job_id);
 
+/* Record accounting information for a job immediately before changing size */
+extern void job_resize_acctg(struct job_record *job_ptr);
+
 /*
  * job_restart - Restart a batch job from checkpointed state
  *
